<resources>
    <string name="app_name">Work-Studies balance</string>
    <string name="title_home">Задачи</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Профиль</string>
    <string name="title_save">Сохранить</string>
    <string name="hint_add_task_text">Событие</string>
    <string name="title_surname">Фамилия:</string>
    <string name="title_name">Имя:</string>
    <string name="title_patronymic_name">Отчество:</string>
    <string name="title_educational_institution">Образовательное учреждение:</string>
    <string name="title_email">Email:</string>
    <string name="title_registration_button">Зарегистрироваться</string>
    <string name="title_enter_surname">Введите фамилию</string>
    <string name="title_enter_name">Введите имя</string>
    <string name="title_enter_patronymic_name">Введите отчество</string>
    <string name="title_enter_email">Введите email</string>
    <string name="title_task_name">Название события:</string>
    <string name="title_task_description">Описание события:</string>
    <string name="hint_task_description">Описание</string>
    <string name="group_name">SAS</string>
    <string name="hint_university">Введите название ВУЗа</string>


    <string-array name="type_array">
        <item>Учебное</item>
        <item>Рабочее</item>
    </string-array>

    <string-array name="urgency_array">
        <item>Несрочное</item>
        <item>Срочное</item>
    </string-array>

    <string-array name="shifting_array">
        <item>Сдвигаемое</item>
        <item>Несдвигаемое</item>
    </string-array>

    <string-array name="filter_tag_array">
        <item>Любое</item>
        <item>Не начато</item>
        <item>В работе</item>
        <item>Завершено</item>
    </string-array>

    <string-array name="filter_urgency_array">
        <item>Любое</item>
        <item>Несрочное</item>
        <item>Срочное</item>
    </string-array>

    <string-array name="filter_shifting_array">
        <item>Любое</item>
        <item>Сдвигаемое</item>
        <item>Несдвигаемое</item>
    </string-array>
</resources>